2008-06-04  Aidan Kehoe  <kehoea@parhasard.net>

	* descr-text.el (describe-property-list): 
	#'require hyper-apropos, since we use hyper-apropos-face

2008-05-25  Aidan Kehoe  <kehoea@parhasard.net>

	* descr-text.el: New.
	Taken from GNU's GPLV2 version of 2007-02-14, with modifications
	for XEmacs support and extensions for Unihan.txt support and
	db/dbm caches.
	* simple.el (what-cursor-position): 
	Support an optional prefix argument, as does GNU, calling
	#'describe-char to giving more detail on the character at point,
	notably from UnicodeData and (in our case, optionally) Unihan.txt.
	* syntax.el (syntax-after): 
	Make this available for the sake of #'describe-char. 
	* mule/mule-cmds.el (iso-2022-control-alist):
	Make this available, for the sake of #'encoded-string-description
	and #'describe-char. 
	* mule/mule-cmds.el (encoded-string-description):
	Make this available, for the sake of #'describe-char.
	* unicode.el (unicode-error-default-translation-table): 
	Make this a char table of type generic, not of type char. Makes it
	possible to have the relevant logic in #'describe-char reasonably
	clear; also, and this is undocumented, makes it much easier to
	implement #'frob-unicode-errors-region. I should document this,
	and revise #'frob-unicode-errors-region. 

2008-05-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (add-to-list): Fix Aidan's last commit.

2008-05-14  Aidan Kehoe  <kehoea@parhasard.net>

	* subr.el (add-to-list): Implement the same logic with a more
	concise syntax; thank you Stephen, in 
	http://mid.gmane.org/87ablomdwx.fsf@uwakimon.sk.tsukuba.ac.jp .

2008-02-25  bpalmer  <bpalmer@gmail.com>

	* subr.el(add-to-list): add support for `compare-fn' to sync with
	emacs.

2008-05-14  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-coding.el (make-8-bit-choose-category):=20
	Control-1 characters extend from #x80 to #x9F (inclusive),
	not from #x80 to #xBF.

2008-05-13  Aidan Kehoe  <kehoea@parhasard.net>
